--- a/favorite-band.html
+++ b/favorite-band.html
@@ -4,7 +4,6 @@
     <title>My favorite band</title>
   </head>
   <body>
-    <div class="my_favorite_band">
         <h1>The Fontaines</h1>
         <img class="pic" src="img/download.jpeg" alt="a picture of a band">
         <div class="sidebar">
@@ -15,6 +14,6 @@
             <li>Dec 13 Portland</li>
           </ul>
         </div>
-    </div>
+        <p class="info">but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet.</p>
   </body>
 </html>
