--- a/favorite-band.html
+++ b/favorite-band.html
@@ -4,7 +4,9 @@
     <title>My favorite band</title>
   </head>
   <body>
+    <div class="top">
         <h1>The Fontaines</h1>
+      </div>
         <img class="pic" src="img/download.jpeg" alt="a picture of a band">
         <div class="sidebar">
           <h2>dates</h2>
